# OfficeViewer

./: .clang-format  .gitignore  CMakeLists.txt  NOTICE  OfficeViewer.pro  README.md
OitViewer/: OitViewer.pro  main.cpp  oitviewer.cpp  oitviewer.h  oitviewer.ui
ViewerTest/: ViewerTest.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: .clang-format  main.cpp  officeviewer.cpp  officeviewer.h  officeviewer.json  oitviewer.cpp  oitviewer.h  oitviewer.ui  test.cpp
src/ViewerTest/: ViewerTest.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
